--- a/robot_ws/src/person_detection_robot/package.xml
+++ b/robot_ws/src/person_detection_robot/package.xml
@@ -27,8 +27,9 @@
 
   <depend>turtlebot3</depend>
   <depend>turtlebot3_msgs</depend>
-
+  
   <build_depend>message_generation</build_depend>
   <build_export_depend>message_runtime</build_export_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>turtlebot3_bringup</exec_depend>
 </package>
