--- a/simulation_ws/src/aws_robomaker_simulation_small_house/CMakeLists.txt
+++ b/simulation_ws/src/aws_robomaker_simulation_small_house/CMakeLists.txt
@@ -13,7 +13,7 @@ install(DIRECTORY launch models worlds maps photos
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-# Copy the rviz model for easier access in B9 RViz 
+# Copy the rviz model for easier access in AWS RoboMaker RViz 
 install(FILES ${turtlebot3_navigation_DIR}/../rviz/turtlebot3_navigation.rviz
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz
   RENAME turtlebot3_navigation.rviz
