--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
 before_install:
 - pip install --user awscli
 - openssl aes-256-cbc -K $encrypted_13642953d095_key -iv $encrypted_13642953d095_iv
-  -in github_deploy.pem.enc -out ../github_deploy.pem -d
+  -in github_deploy.pem.enc -out github_deploy.pem -d
 install:
 - git clone https://github.com/aws-robotics/travis-scripts.git .ros_ci
 script:
