Migrated .travis.yml for CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,34 +21,15 @@ env:
   - GH_USER_NAME="travis-ci"
   - GH_USER_EMAIL="travis@travis-ci.org"
   - AWS_DEFAULT_REGION=us-west-2
+  - WORKSPACES="simulation_ws"
 before_install:
 - pip install --user awscli
-  # - openssl aes-256-cbc -K $encrypted_13642953d095_key -iv $encrypted_13642953d095_iv
-  -in github_deploy.pem.enc -out github_deploy.pem -d
 install:
 - git clone https://github.com/aws-robotics/travis-scripts.git .ros_ci
 script:
-- . .ros_ci/add_tag.sh
+- ". .ros_ci/add_tag.sh"
 - while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
 - .ros_ci/ce_build.sh
 - kill %1
 before_deploy:
 - . .ros_ci/before_deploy.sh
-deploy:
-  - provider: s3
-    access_key_id: "$AWS_ACCESS_KEY_ID"
-    secret_access_key: "$AWS_SECRET_ACCESS_KEY"
-    bucket: "$S3_BUCKET_NAME"
-    region: "us-west-2"
-    local_dir: shared
-    skip_cleanup: true
-    wait-until-deployed: true
-    on:
-      branch: master
-    upload-dir: travis/${SA_NAME}/${ROS_DISTRO}/gazebo${GAZEBO_VERSION}
-  - provider: script
-    script: bash .ros_ci/codepipeline_deploy.sh
-    on:
-      branch: master
-after_deploy:
-- .ros_ci/post_deploy.sh
