--- a/simulation_ws/src/turtlebot3_description_reduced_mesh/package.xml
+++ b/simulation_ws/src/turtlebot3_description_reduced_mesh/package.xml
@@ -13,7 +13,9 @@
   <depend>gazebo_ros_pkgs</depend>
   <depend>gazebo_ros</depend>
   <depend>gazebo_plugins</depend>
-  <depend>ros2launch</depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
+
   <depend>turtlebot3_msgs</depend>
   <depend>turtlebot3</depend>
   <depend>xacro</depend>
