--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 - git clone https://github.com/aws-robotics/travis-scripts.git .ros_ci
 script:
 - . .ros_ci/add_tag.sh
-- while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
+- set +e; while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
 - .ros_ci/ce_build.sh | ts -s "%.s"
 - kill %1
 before_deploy:
