--- a/simulation_ws/src/person_detection_simulation/CMakeLists.txt
+++ b/simulation_ws/src/person_detection_simulation/CMakeLists.txt
@@ -1,21 +1,14 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(person_detection_simulation)
 
-find_package(catkin REQUIRED COMPONENTS
-  gazebo_ros
-  turtlebot3_description   # required to install .rviz model
+find_package(cloudwatch_logger REQUIRED)
+find_package(kinesis_video_streamer REQUIRED)
+find_package(kinesis_video_msgs REQUIRED)
+find_package(h264_video_encoder REQUIRED)
+find_package(health_metric_collector REQUIRED)
+
+install(DIRECTORY launch routes config param
+  DESTINATION share/${PROJECT_NAME}
 )
 
-find_package(gazebo REQUIRED)
-
-catkin_package()
-
-install(DIRECTORY launch routes
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
-# Copy the rviz model for easier access in AWS RoboMaker RViz
-install(FILES ${turtlebot3_description_DIR}/../rviz/model.rviz
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz
-  RENAME turtlebot3_model.rviz
-)
+ament_package()
