--- a/robot_ws/src/person_detection_robot/package.xml
+++ b/robot_ws/src/person_detection_robot/package.xml
@@ -14,11 +14,13 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>cloudwatch_logger</depend>
+  <depend>cloudwatch_metrics_collector</depend>
   <depend>kinesis_manager</depend>
   <depend>kinesis_video_streamer</depend>
   <depend>kinesis_video_msgs</depend>
   <depend>h264_encoder_core</depend>
   <depend>h264_video_encoder</depend>
+  <depend>health_metric_collector</depend>
   <depend>tts</depend>
   <depend>tts_interfaces</depend>
 
