changes done as per PR comments

--- a/simulation_ws/src/person_detection_simulation/CMakeLists.txt
+++ b/simulation_ws/src/person_detection_simulation/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(kinesis_video_msgs REQUIRED)
 find_package(h264_video_encoder REQUIRED)
 find_package(health_metric_collector REQUIRED)
 
-install(DIRECTORY launch routes config 
+install(DIRECTORY launch routes config param
   DESTINATION share/${PROJECT_NAME}
 )
 
