changes in .travis.yml and package.xml

--- a/simulation_ws/src/person_detection_simulation/package.xml
+++ b/simulation_ws/src/person_detection_simulation/package.xml
@@ -19,7 +19,7 @@
   <depend>h264_encoder_core</depend>
   <depend>health_metric_collector</depend>  
   <exec_depend>turtlebot3_description_reduced_mesh</exec_depend>
-
+  <exec_depend>turtlebot3_navigation2</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
