added exec_depend on turtlebot3_bringup in package.xml

--- a/simulation_ws/src/person_detection_simulation/package.xml
+++ b/simulation_ws/src/person_detection_simulation/package.xml
@@ -20,6 +20,7 @@
   <depend>health_metric_collector</depend>  
   <exec_depend>turtlebot3_description_reduced_mesh</exec_depend>
   <exec_depend>turtlebot3_navigation2</exec_depend>
+  <exec_depend>turtlebot3_bringup</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
