--- a/simulation_ws/src/person_detection_simulation/config/kvs_config.yaml
+++ b/simulation_ws/src/person_detection_simulation/config/kvs_config.yaml
@@ -2,7 +2,7 @@ kinesis_video_streamer:
   ros__parameters:
     aws_client_configuration:
       # Specifies where you want the client to communicate. Examples include us-east-1 or us-west-2.
-      region: "us-east-1"
+      region: "us-west-2"
 
       # Values that determine the length of time, in milliseconds, to wait before timing out a request. 
       connect_timeout_ms: 9000
